@@ -5,15 +5,11 @@ import me.okay.coordsaver.CustomSubcommand;
 import me.okay.coordsaver.objects.CoordsObj;
 import me.okay.coordsaver.utils.ColorFormat;
 import net.wesjd.anvilgui.AnvilGUI;
-import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.Material;
-import org.bukkit.World;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -33,12 +29,10 @@ public class CoordsCreateGUI extends CustomSubcommand {
 
     @Override
     public boolean onRun(CommandSender sender, CustomSubcommand command, String label, String[] args) {
-        if (!(sender instanceof Player)) {
+        if (!(sender instanceof Player player)) {
             sender.sendMessage(ColorFormat.colorize("&cThis command can only be run by a player."));
             return true;
         }
-
-        Player player = (Player) sender;
 
         boolean global;
 
@@ -71,7 +65,7 @@ public class CoordsCreateGUI extends CustomSubcommand {
 
                     player.performCommand("coordsaver:coords info "+coordsObj.name);
 
-                    return Arrays.asList(AnvilGUI.ResponseAction.close());
+                    return List.of(AnvilGUI.ResponseAction.close());
 
                 })
                 .text((global ? "Global " : "")+"Coordinate "+CoordSaver.getInstance().getDatabase().getCoordsCount(player.getUniqueId()))
